--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,7 +1,7 @@
 test:
-	python3 -m unittest discover -s tests
+	venv/bin/python3 -m unittest discover -s tests
 
-refresh_venv:
+venv:
 	rm -rf venv
 	python3 -m venv venv
 	venv/bin/pip3 install -U -r requirements.txt
